--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{ "homepage":"http://jinu98.github.io/mymik",
+{
+  "homepage": "http://jinu98.github.io/mymik",
   "name": "mymik",
   "version": "0.1.0",
   "private": true,
@@ -38,6 +39,17 @@
     ]
   },
   "devDependencies": {
+    "@iconify-icons/teenyicons": "^1.1.0",
+    "@iconify/icons-bi": "^1.1.0",
+    "@iconify/icons-carbon": "^1.1.0",
+    "@iconify/icons-fa": "^1.1.0",
+    "@iconify/icons-gridicons": "^1.1.0",
+    "@iconify/icons-heroicons-outline": "^1.1.0",
+    "@iconify/icons-ic": "^1.1.1",
+    "@iconify/icons-icomoon-free": "^1.1.0",
+    "@iconify/icons-mdi": "^1.1.2",
+    "@iconify/icons-whh": "^1.1.0",
+    "@iconify/react": "^1.1.3",
     "gh-pages": "^3.1.0"
   }
 }
